--- a/beispiele/motor-fe/public/index.html
+++ b/beispiele/motor-fe/public/index.html
@@ -1,81 +1,49 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jquery.min.js"></script>
+    <script src="jquery.pep.js"></script>
     <script src="socket.io.js"></script>
+    <script src="area-config.js"></script>
+    <script src="area-control.js"></script>
+    <script src="area-buttons.js"></script>
     <script>
-        $(function () {
 
-            let socket = io(location.host);
-            console.log("socket", socket);
-            socket.emit("drive", "msg");
-            let isDriving = false;
-            let lastSpeed = 0;
-            let lastDirection = 0;
-
-            let startPoint = {
-                x: 0,
-                y: 0
-            };
-
-            var $indikator = $(".pointer-indikator");
-
-            $("[data-control-input]")
-                .on("pointerdown mousedown touchstart", function (e) {
-                    console.log("start");
-                    isDriving = true;
-                    $indikator.fadeIn().css({top:e.pageY, left: e.pageX});
-                    startPoint.x = e.screenX;
-                    startPoint.y = e.screenY;
-
-                })
-                .on("pointermove mousemove touchmove", function (e) {
-                    if (!isDriving) return;
-
-                    let speed = startPoint.y - e.screenY;
-                    let direction = e.screenX - startPoint.x;
-                    if (speed > 255) speed = 255;
-                    if (speed <  -255) speed = -255;
-
-                    if (direction > 255) direction = 255;
-                    if (direction <  -255) direction = -255;
-
-                    let speedDelta = (speed - lastSpeed);
-                    let directionDelta = (direction - lastDirection);
-
-                    if (Math.abs(speedDelta) > 15 || Math.abs(directionDelta) ) {
-
-                        console.log("move direction",direction,"speed",speed);
-                        socket.emit("drive", {direction: direction, speed: speed});
-                        lastSpeed = speed;
-                        lastDirection = direction;
-                    }
-                })
-                .on("pointerup mouseup touchend", function () {
-                    stop();
-
-                });
-
-                $(window).on("blur", function () {
-                    stop();
-                });
-
-                function stop(){
-                    isDriving = false;
-                    lastDirection = 0;
-                    lastSpeed = 0;
-                    $indikator.fadeOut();
-                    socket.emit("drive", {direction: 0, speed: 0});
-                }
-        });
     </script>
     <link rel="stylesheet" href="area.css" />
 
+    <div class="area-buttons">
+        <button data-toggle-config>
+            <svg class="icon-gear" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="32" viewBox="0 0 27 32">
+                <path d="M18.286 16q0-1.893-1.339-3.232t-3.232-1.339-3.232 1.339-1.339 3.232 1.339 3.232 3.232 1.339 3.232-1.339 1.339-3.232zM27.429 14.054v3.964q0 0.214-0.143 0.411t-0.357 0.232l-3.304 0.5q-0.339 0.964-0.696 1.625 0.625 0.893 1.911 2.464 0.179 0.214 0.179 0.446t-0.161 0.411q-0.482 0.661-1.768 1.929t-1.679 1.268q-0.214 0-0.464-0.161l-2.464-1.929q-0.786 0.411-1.625 0.679-0.286 2.429-0.518 3.321-0.125 0.5-0.643 0.5h-3.964q-0.25 0-0.438-0.152t-0.205-0.384l-0.5-3.286q-0.875-0.286-1.607-0.661l-2.518 1.911q-0.179 0.161-0.446 0.161-0.25 0-0.446-0.196-2.25-2.036-2.946-3-0.125-0.179-0.125-0.411 0-0.214 0.143-0.411 0.268-0.375 0.911-1.188t0.964-1.259q-0.482-0.893-0.732-1.768l-3.268-0.482q-0.232-0.036-0.375-0.223t-0.143-0.42v-3.964q0-0.214 0.143-0.411t0.339-0.232l3.321-0.5q0.25-0.821 0.696-1.643-0.714-1.018-1.911-2.464-0.179-0.214-0.179-0.429 0-0.179 0.161-0.411 0.464-0.643 1.759-1.92t1.688-1.277q0.232 0 0.464 0.179l2.464 1.911q0.786-0.411 1.625-0.679 0.286-2.429 0.518-3.321 0.125-0.5 0.643-0.5h3.964q0.25 0 0.438 0.152t0.205 0.384l0.5 3.286q0.875 0.286 1.607 0.661l2.536-1.911q0.161-0.161 0.429-0.161 0.232 0 0.446 0.179 2.304 2.125 2.946 3.036 0.125 0.143 0.125 0.393 0 0.214-0.143 0.411-0.268 0.375-0.911 1.188t-0.964 1.259q0.464 0.893 0.732 1.75l3.268 0.5q0.232 0.036 0.375 0.223t0.143 0.42z"></path>
+            </svg>
+            <svg class="icon-arrows" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 448 448">
+                <path d="M448 224q0 6.5-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75-4.75-11.25v-32h-96v96h32q6.5 0 11.25 4.75t4.75 11.25-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25 11.25-4.75h32v-96h-96v32q0 6.5-4.75 11.25t-11.25 4.75-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75 4.75 11.25v32h96v-96h-32q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75l64 64q4.75 4.75 4.75 11.25t-4.75 11.25-11.25 4.75h-32v96h96v-32q0-6.5 4.75-11.25t11.25-4.75 11.25 4.75l64 64q4.75 4.75 4.75 11.25z"></path>
+            </svg>
+        </button>
 
-    <div class="area-control" data-control-input>
+    </div>
+    <div class="area-control" data-control-input touch-action="none">
         <div class="area-text">
-            <h1> Fernbedienung</h1>
+            <h1>Fernbedienung</h1>
         </div>
     </div>
+    <div class="area-config">
+        <div class="area-text">
+            <h1>Config</h1>
+            <ul>
+                <li>
+                    <button data-quit-server>Server beenden</button>
+                </li>
+                <li>
+                    <button data-reboot>Computer neustarten</button>
+                </li>
+                <li>
+                    <button data-shutdown>Computer ausschalten</button>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 
     <div class="pointer-indikator"></div>
 </html>
