CSS vereinzelt, Pin 27 als Frontlicht für Pi2 festgelegt, Nah und Fernlicht haben 2 Buttons, Licht-Icons eingebaut

--- a/beispiele/motor-fe/public/index.html
+++ b/beispiele/motor-fe/public/index.html
@@ -1,68 +1,93 @@
 <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="jquery.min.js"></script>
-    <script src="jquery.pep.js"></script>
-    <script src="socket.io.js"></script>
-    <script src="area-config.js"></script>
-    <script src="area-control.js"></script>
-    <script src="area-buttons.js"></script>
-    <script src="area-reload.js"></script>
-    <script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="jquery.min.js"></script>
+<script src="jquery.pep.js"></script>
+<script src="socket.io.js"></script>
+<script src="area-config.js"></script>
+<script src="area-control.js"></script>
+<script src="area-buttons.js"></script>
+<script src="area-reload.js"></script>
+<script>
 
-    </script>
-    <link rel="stylesheet" href="area.css" />
+</script>
+<link rel="stylesheet" href="area.css"/>
+<link rel="stylesheet" href="area-buttons.css"/>
+<link rel="stylesheet" href="area-config.css"/>
+<link rel="stylesheet" href="area-control.css"/>
+<link rel="stylesheet" href="area-reload.css"/>
 
-    <div class="area area-buttons">
-        <button data-toggle-config>
-            <svg class="icon-gear" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="32" viewBox="0 0 27 32">
-                <path fill="#fff" d="M18.286 16q0-1.893-1.339-3.232t-3.232-1.339-3.232 1.339-1.339 3.232 1.339 3.232 3.232 1.339 3.232-1.339 1.339-3.232zM27.429 14.054v3.964q0 0.214-0.143 0.411t-0.357 0.232l-3.304 0.5q-0.339 0.964-0.696 1.625 0.625 0.893 1.911 2.464 0.179 0.214 0.179 0.446t-0.161 0.411q-0.482 0.661-1.768 1.929t-1.679 1.268q-0.214 0-0.464-0.161l-2.464-1.929q-0.786 0.411-1.625 0.679-0.286 2.429-0.518 3.321-0.125 0.5-0.643 0.5h-3.964q-0.25 0-0.438-0.152t-0.205-0.384l-0.5-3.286q-0.875-0.286-1.607-0.661l-2.518 1.911q-0.179 0.161-0.446 0.161-0.25 0-0.446-0.196-2.25-2.036-2.946-3-0.125-0.179-0.125-0.411 0-0.214 0.143-0.411 0.268-0.375 0.911-1.188t0.964-1.259q-0.482-0.893-0.732-1.768l-3.268-0.482q-0.232-0.036-0.375-0.223t-0.143-0.42v-3.964q0-0.214 0.143-0.411t0.339-0.232l3.321-0.5q0.25-0.821 0.696-1.643-0.714-1.018-1.911-2.464-0.179-0.214-0.179-0.429 0-0.179 0.161-0.411 0.464-0.643 1.759-1.92t1.688-1.277q0.232 0 0.464 0.179l2.464 1.911q0.786-0.411 1.625-0.679 0.286-2.429 0.518-3.321 0.125-0.5 0.643-0.5h3.964q0.25 0 0.438 0.152t0.205 0.384l0.5 3.286q0.875 0.286 1.607 0.661l2.536-1.911q0.161-0.161 0.429-0.161 0.232 0 0.446 0.179 2.304 2.125 2.946 3.036 0.125 0.143 0.125 0.393 0 0.214-0.143 0.411-0.268 0.375-0.911 1.188t-0.964 1.259q0.464 0.893 0.732 1.75l3.268 0.5q0.232 0.036 0.375 0.223t0.143 0.42z"></path>
-            </svg>
-            <svg class="icon-arrows" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 448 448">
-                <path fill="#fff" d="M448 224q0 6.5-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75-4.75-11.25v-32h-96v96h32q6.5 0 11.25 4.75t4.75 11.25-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25 11.25-4.75h32v-96h-96v32q0 6.5-4.75 11.25t-11.25 4.75-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75 4.75 11.25v32h96v-96h-32q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75l64 64q4.75 4.75 4.75 11.25t-4.75 11.25-11.25 4.75h-32v96h96v-32q0-6.5 4.75-11.25t11.25-4.75 11.25 4.75l64 64q4.75 4.75 4.75 11.25z"></path>
-            </svg>
-        </button>
+<div class="area area-buttons">
+    <button data-toggle-config>
+        <svg class="icon-gear" version="1.1" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="32" viewBox="0 0 27 32">
+            <path d="M18.286 16q0-1.893-1.339-3.232t-3.232-1.339-3.232 1.339-1.339 3.232 1.339 3.232 3.232 1.339 3.232-1.339 1.339-3.232zM27.429 14.054v3.964q0 0.214-0.143 0.411t-0.357 0.232l-3.304 0.5q-0.339 0.964-0.696 1.625 0.625 0.893 1.911 2.464 0.179 0.214 0.179 0.446t-0.161 0.411q-0.482 0.661-1.768 1.929t-1.679 1.268q-0.214 0-0.464-0.161l-2.464-1.929q-0.786 0.411-1.625 0.679-0.286 2.429-0.518 3.321-0.125 0.5-0.643 0.5h-3.964q-0.25 0-0.438-0.152t-0.205-0.384l-0.5-3.286q-0.875-0.286-1.607-0.661l-2.518 1.911q-0.179 0.161-0.446 0.161-0.25 0-0.446-0.196-2.25-2.036-2.946-3-0.125-0.179-0.125-0.411 0-0.214 0.143-0.411 0.268-0.375 0.911-1.188t0.964-1.259q-0.482-0.893-0.732-1.768l-3.268-0.482q-0.232-0.036-0.375-0.223t-0.143-0.42v-3.964q0-0.214 0.143-0.411t0.339-0.232l3.321-0.5q0.25-0.821 0.696-1.643-0.714-1.018-1.911-2.464-0.179-0.214-0.179-0.429 0-0.179 0.161-0.411 0.464-0.643 1.759-1.92t1.688-1.277q0.232 0 0.464 0.179l2.464 1.911q0.786-0.411 1.625-0.679 0.286-2.429 0.518-3.321 0.125-0.5 0.643-0.5h3.964q0.25 0 0.438 0.152t0.205 0.384l0.5 3.286q0.875 0.286 1.607 0.661l2.536-1.911q0.161-0.161 0.429-0.161 0.232 0 0.446 0.179 2.304 2.125 2.946 3.036 0.125 0.143 0.125 0.393 0 0.214-0.143 0.411-0.268 0.375-0.911 1.188t-0.964 1.259q0.464 0.893 0.732 1.75l3.268 0.5q0.232 0.036 0.375 0.223t0.143 0.42z"></path>
+        </svg>
+        <svg class="icon-arrows" version="1.1" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 448 448">
+            <path d="M448 224q0 6.5-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75-4.75-11.25v-32h-96v96h32q6.5 0 11.25 4.75t4.75 11.25-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25 11.25-4.75h32v-96h-96v32q0 6.5-4.75 11.25t-11.25 4.75-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75 4.75 11.25v32h96v-96h-32q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75l64 64q4.75 4.75 4.75 11.25t-4.75 11.25-11.25 4.75h-32v96h96v-32q0-6.5 4.75-11.25t11.25-4.75 11.25 4.75l64 64q4.75 4.75 4.75 11.25z"></path>
+        </svg>
+    </button>
 
-        <button class="btn-light" data-toggle-light>
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 448 448">
-                <path fill="#fff" d="M448 224q0 6.5-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75-4.75-11.25v-32h-96v96h32q6.5 0 11.25 4.75t4.75 11.25-4.75 11.25l-64 64q-4.75 4.75-11.25 4.75t-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25 11.25-4.75h32v-96h-96v32q0 6.5-4.75 11.25t-11.25 4.75-11.25-4.75l-64-64q-4.75-4.75-4.75-11.25t4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75 4.75 11.25v32h96v-96h-32q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25l64-64q4.75-4.75 11.25-4.75t11.25 4.75l64 64q4.75 4.75 4.75 11.25t-4.75 11.25-11.25 4.75h-32v96h96v-32q0-6.5 4.75-11.25t11.25-4.75 11.25 4.75l64 64q4.75 4.75 4.75 11.25z"></path>
-            </svg>
-        </button>
+    <button class="btn-light btn-light--dim" data-toggle-light="dim">
+        <svg class="icon-light-dim" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+             version="1.1" viewBox="0 0 512.168 512.168" style="enable-background:new 0 0 512.168 512.168;" width="32"
+             height="32">
+            <path d="M255,75.884c-83.627,0-161.28,28.16-209.067,75.947C15.213,181.697-1,217.537-1,255.084c0,98.133,115.2,179.2,256,179.2 c3.413,0,7.68-2.56,8.533-5.973c34.133-113.493,34.133-232.96,0-346.453C261.827,78.444,258.413,75.884,255,75.884z      M249.027,418.071c-128.853-2.56-232.96-74.24-232.96-162.133c0-33.28,14.507-64.853,41.813-92.16     c43.52-42.667,114.347-69.12,191.147-70.827C279.747,199.617,279.747,311.404,249.027,418.071z"></path>
+            <path d="M505.88,324.204l-187.733-76.8c-4.267-2.56-9.387,0-11.093,4.267c-2.56,4.267,0,9.387,4.267,11.093l187.733,76.8 c0.853,0.853,2.56,0.853,3.413,0.853c3.413,0,6.827-1.707,7.68-5.12C512.707,331.031,510.147,325.911,505.88,324.204z"></path>
+            <path d="M311.32,177.431l187.733,76.8c0.853,0.853,2.56,0.853,3.413,0.853c3.413,0,6.827-1.707,7.68-5.12 c2.56-4.267,0-9.387-4.267-11.093l-187.733-76.8c-4.267-2.56-9.387,0-11.093,4.267     C304.493,170.604,307.053,175.724,311.32,177.431z"></path>
+            <path d="M505.88,409.537l-187.733-76.8c-4.267-2.56-8.533,0-11.093,4.267s0,9.387,4.267,11.093l187.733,76.8 c0.853,0.853,2.56,0.853,3.413,0.853c3.413,0,6.827-1.707,7.68-5.12C512.707,416.364,510.147,411.244,505.88,409.537z"></path>
+        </svg>
 
+    </button>
+
+    <button class="btn-light btn-light--far" data-toggle-light="far">
+        <svg class="icon-light-far" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 504.446 504.446" style="enable-background:new 0 0 504.446 504.446;" xml:space="preserve" width="32" height="32">
+	        <path d="M251.643,74.961h-0.839c-82.256,0-159.475,28.538-206.479,74.702C14.948,179.879-1,214.292-1,251.223     c0,96.525,113.311,176.262,252.643,176.262c3.357,0,7.554-2.518,8.393-5.875c33.574-111.633,33.574-229.141,0-340.774 C258.357,77.479,255,74.961,251.643,74.961z M245.767,411.538c-127.58-2.518-229.98-73.023-229.98-159.475     c0-31.895,14.269-62.951,41.128-89.81c42.807-43.646,113.311-69.666,188.852-70.505     C275.984,196.666,275.984,306.62,245.767,411.538z"></path>
+            <path d="M495.052,200.862H310.397c-5.036,0-8.393,3.357-8.393,8.393s3.357,8.393,8.393,8.393h184.656     c5.036,0,8.393-3.357,8.393-8.393S500.088,200.862,495.052,200.862z"></path>
+            <path d="M495.052,284.797H310.397c-5.036,0-8.393,3.357-8.393,8.393s3.357,8.393,8.393,8.393h184.656     c5.036,0,8.393-3.357,8.393-8.393S500.088,284.797,495.052,284.797z"></path>
+            <path d="M495.052,368.731H310.397c-5.036,0-8.393,3.357-8.393,8.393c0,5.036,3.357,8.393,8.393,8.393h184.656     c5.036,0,8.393-3.357,8.393-8.393C503.446,372.089,500.088,368.731,495.052,368.731z"></path>
+            <path d="M310.397,133.715h184.656c5.036,0,8.393-3.357,8.393-8.393c0-5.036-3.357-8.393-8.393-8.393H310.397     c-5.036,0-8.393,3.357-8.393,8.393C302.003,130.357,305.361,133.715,310.397,133.715z"></path>
+        </svg>
+    </button>
+
+</div>
+
+
+<div class="area area-control" data-control-input touch-action="none">
+    <div class="area-text">
+        <h1>Fernbedienung</h1>
     </div>
-
-
-    <div class="area area-control" data-control-input touch-action="none">
-        <div class="area-text">
-            <h1>Fernbedienung</h1>
-        </div>
+</div>
+<div class="area area-config">
+    <div class="area-text">
+        <h1>Config</h1>
+        <ul>
+            <li>
+                <button data-quit-server>Server beenden</button>
+            </li>
+            <li>
+                <button data-reboot>Computer neustarten</button>
+            </li>
+            <li>
+                <button data-shutdown>Computer ausschalten</button>
+            </li>
+        </ul>
     </div>
-    <div class="area area-config">
-        <div class="area-text">
-            <h1>Config</h1>
-            <ul>
-                <li>
-                    <button data-quit-server>Server beenden</button>
-                </li>
-                <li>
-                    <button data-reboot>Computer neustarten</button>
-                </li>
-                <li>
-                    <button data-shutdown>Computer ausschalten</button>
-                </li>
-            </ul>
-        </div>
-    </div>
+</div>
 
 
-    <div class="pointer-indikator"></div>
+<div class="pointer-indikator"></div>
 
 
-    <div class="area-reload" >
-        <button class="btn-reload" data-reload>
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="100" viewBox="0 0 512 512">
-                <path fill="#fff" d="M444.84 83.16c-46.804-51.108-114.077-83.16-188.84-83.16-141.385 0-256 114.615-256 256h48c0-114.875 93.125-208 208-208 61.51 0 116.771 26.709 154.848 69.153l-74.848 74.847h176v-176l-67.16 67.16z"></path>
-                <path fill="#fff" d="M464 256c0 114.875-93.125 208-208 208-61.51 0-116.771-26.709-154.847-69.153l74.847-74.847h-176v176l67.16-67.16c46.804 51.108 114.077 83.16 188.84 83.16 141.385 0 256-114.615 256-256h-48z"></path>
-            </svg>
-        </button>
-    </div>
+<div class="area-reload">
+    <button class="btn-reload" data-reload>
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100"
+             height="100" viewBox="0 0 512 512">
+            <path fill="#fff"
+                  d="M444.84 83.16c-46.804-51.108-114.077-83.16-188.84-83.16-141.385 0-256 114.615-256 256h48c0-114.875 93.125-208 208-208 61.51 0 116.771 26.709 154.848 69.153l-74.848 74.847h176v-176l-67.16 67.16z"></path>
+            <path fill="#fff"
+                  d="M464 256c0 114.875-93.125 208-208 208-61.51 0-116.771-26.709-154.847-69.153l74.847-74.847h-176v176l67.16-67.16c46.804 51.108 114.077 83.16 188.84 83.16 141.385 0 256-114.615 256-256h-48z"></path>
+        </svg>
+    </button>
+</div>
 </html>
