Der Client hat jetzt mit socket.js eine Datei die sich um die Socketverbindung kümmert. Wenn der Tab wieder sichtbar wird, wird die Verbindung wieder hergestellt

--- a/beispiele/motor-fe/public/index.html
+++ b/beispiele/motor-fe/public/index.html
@@ -3,6 +3,7 @@
 <script src="jquery.min.js"></script>
 <script src="jquery.pep.js"></script>
 <script src="socket.io.js"></script>
+<script src="socket.js"></script>
 <script src="area-config.js"></script>
 <script src="area-control.js"></script>
 <script src="area-buttons.js"></script>
