Die Kamera kann jetzt über einen Servo vertikal gedreht werden. Bisher nur über die Cursor Taste

--- a/beispiele/motor-fe/public/index.html
+++ b/beispiele/motor-fe/public/index.html
@@ -8,6 +8,7 @@
 <script src="area-control.js"></script>
 <script src="area-buttons.js"></script>
 <script src="area-reload.js"></script>
+<script src="camera-control.js"></script>
 <script>
 
 </script>
