Kommunikation zwischen den Kameracontrolern und dem Socket auf Events geändert, camera-button-control.js hinzugefügt.

--- a/beispiele/motor-fe/public/index.html
+++ b/beispiele/motor-fe/public/index.html
@@ -10,6 +10,7 @@
 <script src="area-buttons.js"></script>
 <script src="area-reload.js"></script>
 <script src="camera-key-control.js"></script>
+<script src="camera-button-control.js"></script>
 <script src="camera-gyro-control.js"></script>
 <script>
 
@@ -52,6 +53,13 @@
             <path d="M495.052,368.731H310.397c-5.036,0-8.393,3.357-8.393,8.393c0,5.036,3.357,8.393,8.393,8.393h184.656     c5.036,0,8.393-3.357,8.393-8.393C503.446,372.089,500.088,368.731,495.052,368.731z"></path>
             <path d="M310.397,133.715h184.656c5.036,0,8.393-3.357,8.393-8.393c0-5.036-3.357-8.393-8.393-8.393H310.397     c-5.036,0-8.393,3.357-8.393,8.393C302.003,130.357,305.361,133.715,310.397,133.715z"></path>
         </svg>
+    </button>
+
+    <button class="btn-cam btn-cam--up" data-camera-vertical="up">
+        up
+    </button>
+    <button class="btn-cam btn-cam--down" data-camera-vertical="down">
+        down
     </button>
 
 </div>
